# IFC-stats-plugin

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4de8195  ExcelExportHelper.cpp  ExcelExportHelper.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  t.rc.url
IfcPlusPlus/: CMakeLists.txt
IfcPlusPlus/src/ifcpp/IFC4/: EntityFactory.cpp  TypeFactory.cpp
IfcPlusPlus/src/ifcpp/IFC4/lib/: IfcAbsorbedDoseMeasure.cpp  IfcAccelerationMeasure.cpp  IfcActionRequest.cpp  IfcActionRequestTypeEnum.cpp  IfcActionSourceTypeEnum.cpp  IfcActionTypeEnum.cpp  IfcActor.cpp  IfcActorRole.cpp  IfcActorSelect.cpp  IfcActuator.cpp  IfcActuatorType.cpp  IfcActuatorTypeEnum.cpp  IfcAddress.cpp  IfcAddressTypeEnum.cpp  IfcAdvancedBrep.cpp  IfcAdvancedBrepWithVoids.cpp  IfcAdvancedFace.cpp  IfcAirTerminal.cpp  IfcAirTerminalBox.cpp  IfcAirTerminalBoxType.cpp  IfcAirTerminalBoxTypeEnum.cpp  IfcAirTerminalType.cpp  IfcAirTerminalTypeEnum.cpp  IfcAirToAirHeatRecovery.cpp  IfcAirToAirHeatRecoveryType.cpp  IfcAirToAirHeatRecoveryTypeEnum.cpp  IfcAlarm.cpp  IfcAlarmType.cpp  IfcAlarmTypeEnum.cpp  IfcAmountOfSubstanceMeasure.cpp  IfcAnalysisModelTypeEnum.cpp  IfcAnalysisTheoryTypeEnum.cpp  IfcAngularVelocityMeasure.cpp  IfcAnnotation.cpp  IfcAnnotationFillArea.cpp  IfcApplication.cpp  IfcAppliedValue.cpp  IfcAppliedValueSelect.cpp  IfcApproval.cpp  IfcApprovalRelationship.cpp  (+1133 more)
IfcPlusPlus/src/ifcpp/geometry/Carve/: FaceConverter.h  GeomDebugDump.h  GeometryConverter.h  GeometryInputData.h  PlacementConverter.h  RepresentationConverter.h  SolidModelConverter.h  Sweeper.h  TessellatedItemConverter.h
IfcPlusPlus/src/ifcpp/model/: BuildingModel.cpp  UnitConverter.cpp
IfcPlusPlus/src/ifcpp/reader/: AbstractReader.cpp  ReaderSTEP.cpp  ReaderUtil.cpp  ReaderUtil.h  ReaderXML.cpp
IfcPlusPlus/src/ifcpp/writer/: WriterSTEP.cpp  WriterUtil.cpp  WriterUtil.h
